Rellegards Rest Encounter 1 almost done

--- a/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/quest.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/quest.ini
@@ -1,7 +1,7 @@
 ; Saved by version: 1.7.0b
 [Quest]
 format=9
-hidden=False
+hidden=True
 type=D2E
 defaultlanguage=English
 
@@ -12,3 +12,6 @@ Localization.English.txt
 [QuestData]
 tiles.ini
 tokens.ini
+spawns.ini
+events.ini
+door.ini
