--- a/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/tokens.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/tokens.ini
@@ -4,7 +4,8 @@
 xposition=-10
 yposition=3
 display=false
-buttons=0
+buttons=1
+event1=
 type=TokenSearch
 
 [Token1_Search2P2]
@@ -111,3 +112,58 @@ yposition=-9
 display=false
 buttons=0
 type=TokenSearch
+
+[Token1_Obj1]
+xposition=-5
+yposition=9
+buttons=2
+event1=Event1_NotTheKey
+event2=Event1_GotTheKey
+buttoncolor1="blue"
+buttoncolor2="red"
+remove=Token1_Obj1
+type=TokenObjectiveBack
+
+[Token1_Obj2]
+xposition=-4
+yposition=9
+buttons=2
+event1=Event1_NotTheKey
+event2=Event1_GotTheKey
+buttoncolor1="blue"
+buttoncolor2="red"
+remove=Token1_Obj2
+type=TokenObjectiveBack
+
+[Token1_Obj3]
+xposition=-3
+yposition=9
+buttons=2
+event1=Event1_NotTheKey
+event2=Event1_GotTheKey
+buttoncolor1="blue"
+buttoncolor2="red"
+remove=Token1_Obj3
+type=TokenObjectiveBack
+
+[Token1_Obj4]
+xposition=-2
+yposition=9
+buttons=2
+event1=Event1_NotTheKey
+event2=Event1_GotTheKey
+buttoncolor1="blue"
+buttoncolor2="red"
+remove=Token1_Obj4
+type=TokenObjectiveBack
+
+[Token1_Obj5]
+xposition=-1
+yposition=9
+buttons=2
+event1=Event1_NotTheKey
+event2=Event1_GotTheKey
+buttoncolor1="blue"
+buttoncolor2="red"
+remove=Token1_Obj5
+type=TokenObjectiveBack
