--- a/HeirsOfBlood_Acolyte_of_Saradyn/events.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/events.ini
@@ -87,7 +87,7 @@ trigger=DefeatedMonsterBarghest
 
 [EventWipeTheBoard]
 buttons=1
-event1=
+event1=EventNextQuestWin EventNextQuestLost
 remove=#boardcomponents #monsters
 
 [EventSpecialRules]
@@ -177,3 +177,29 @@ remove=TokenSearch3
 buttons=1
 event1=
 remove=TokenSearch4
+
+[EventRellegardsRest]
+buttons=1
+event1=HeirsOfBlood_Rellegars_Rest/quest.ini
+
+[EventSiegeOfSkytower]
+buttons=1
+event1=HeirsOfBlood_Siege_of_Skytower/quest.ini
+
+[EventNextQuestWin]
+buttons=2
+event1=EventRellegardsRest
+event2=EventSiegeOfSkytower
+conditions=FatiqueCounter,<,7
+
+[EventNextQuestLost]
+buttons=1
+event1=EventRellegardsRest EventSiegeOfSkytower
+conditions=FatiqueCounter,>=,7
+randomevents=true
+
+[EventNoMorale]
+buttons=1
+event1=EventOverlordWin
+trigger=NoMorale
+operations=FatiqueCounter,=,7
