First encounter work

--- a/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/events.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/events.ini
@@ -97,15 +97,6 @@ conditions=#heroes,>=,4
 buttons=1
 event1=EventWhipeTheBoard
 
-[Event1_Reinforcement]
-xposition=-8
-yposition=-3
-highlight=true
-buttons=1
-event1=
-trigger=EndRound
-operations=FatiqueCounter,+,1
-
 [Event1_GotTheKey]
 buttons=1
 event1=
@@ -118,6 +109,7 @@ event1=
 buttons=1
 event1=
 remove=#boardcomponents #monsters
+operations=$%morale,=,#heroes
 
 [EventOverlordWin]
 buttons=1
@@ -135,3 +127,37 @@ event1=EventOverlordWin
 trigger=StartRound
 conditions=FatiqueCounter,>=,7
 audio=AudioDefeated
+
+[EventTakeSearch4P]
+buttons=1
+event1=
+remove=Token1_Search4P
+
+[EventTakeSearch2P2]
+buttons=1
+event1=
+remove=Token1_Search2P2
+
+[EventTakeSearch3P]
+buttons=1
+event1=
+remove=Token1_Search3P
+
+[EventTakeSearch2P1]
+buttons=1
+event1=
+remove=Token1_Search2P1
+
+[Event1_Reinforcement]
+xposition=-8
+yposition=-3
+highlight=true
+buttons=1
+event1=Spawn1_Reinforcement
+trigger=EndRound
+
+[Event1_FatiqueInc]
+display=false
+buttons=0
+trigger=EndRound
+operations=FatiqueCounter,+,1
