--- a/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/spawns.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/spawns.ini
@@ -35,3 +35,9 @@ yposition=8
 buttons=1
 event1=Event1_PlaceObjToken
 monster=MonsterFleshMoulder
+
+[Spawn1_Reinforcement]
+display=false
+buttons=0
+trigger=EndRound
+monster=MonsterGoblinArcher
