--- a/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/tokens.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/tokens.ini
@@ -3,30 +3,33 @@
 [Token1_Search2P1]
 xposition=-10
 yposition=3
-display=false
 buttons=1
-event1=
+event1=EventTakeSearch2P1
+buttoncolor1="green"
 type=TokenSearch
 
 [Token1_Search2P2]
 xposition=-1
 yposition=6
-display=false
-buttons=0
+buttons=1
+event1=EventTakeSearch2P2
+buttoncolor1="green"
 type=TokenSearch
 
 [Token1_Search3P]
 xposition=-3
 yposition=2
-display=false
-buttons=0
+buttons=1
+event1=EventTakeSearch3P
+buttoncolor1="green"
 type=TokenSearch
 
 [Token1_Search4P]
 xposition=5
 yposition=9
-display=false
-buttons=0
+buttons=1
+event1=EventTakeSearch4P
+buttoncolor1="green"
 type=TokenSearch
 
 [Token2_Support_Pillar1]
