First encounter pretty much done

--- a/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/door.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/door.ini
@@ -10,3 +10,27 @@ buttoncolor1="green"
 buttoncolor2="red"
 color=red
 rotation=90
+
+[Door2_Entrance]
+xposition=0
+yposition=-18
+display=false
+buttons=0
+color=yellow
+rotation=90
+
+[Door2_Waterway]
+xposition=-3
+yposition=-20
+display=false
+buttons=0
+color=yellow
+rotation=90
+
+[Door2_Library]
+xposition=0
+yposition=-12
+display=false
+buttons=0
+color=yellow
+rotation=90
