--- a/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/events.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/events.ini
@@ -6,8 +6,9 @@ event1=Event1_PlaceHeroes
 add=Tile1_Entrance Tile1_18A Tile1_6A_Stream Tile1_3A_Rivers_Edge Tile1_12A_Pond Tile1_EndCap Tile1_21A Tile1_Exit Door1_Exit
 
 [EventIntro1]
-buttons=1
+buttons=2
 event1=EventIntro2
+event2=Event2_Intro1
 trigger=EventStart
 mincam=true
 xposition=-11
@@ -107,7 +108,7 @@ event1=
 
 [EventWhipeTheBoard]
 buttons=1
-event1=
+event1=Event2_Intro1
 remove=#boardcomponents #monsters
 operations=$%morale,=,#heroes
 
@@ -161,3 +162,33 @@ display=false
 buttons=0
 trigger=EndRound
 operations=FatiqueCounter,+,1
+
+[Event2_Intro1]
+buttons=1
+event1=Event0
+maxcam=true
+xposition=3
+yposition=-4
+
+[Event0]
+buttons=1
+event1=Event2_PlaceTiles1
+mincam=true
+xposition=-8
+yposition=-27
+
+[Event2_PlaceTiles1]
+xposition=0
+yposition=-22
+buttons=1
+event1=Spawn2_Goblins
+add=Tile2_Entrance Tile2_19B_Stairway Door2_Entrance Token2_Support_Pillar1
+
+[EventObjective]
+buttons=1
+event1=Event2_StartGame
+
+[Event2_StartGame]
+display=false
+buttons=0
+audio=AudioNewRound
