--- a/HeirsOfBlood_Acolyte_of_Saradyn/events.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/events.ini
@@ -13,7 +13,7 @@ xposition=-6
 yposition=-3
 highlight=true
 buttons=1
-event1=EventPlaceGoblins
+event1=SpawnGoblins
 
 [EventPlaceSearch2P1]
 xposition=-2
@@ -22,39 +22,25 @@ highlight=true
 buttons=1
 event1=EventPlaceSearch2P2
 add=TokenSearch2P1
-conditions=#heroes,==,2
-
-[EventPlaceGoblins]
-xposition=-3
-yposition=9
-highlight=true
-buttons=1
-event1=SpawnGoblins
-
-[EventPlaceBargs]
-xposition=2
-yposition=9
-highlight=true
-buttons=1
-event1=SpawnBarghest
+conditions=#heroes,>=,2
 
 [EventPlaceSearch3P]
 xposition=0
 yposition=2
 highlight=true
 buttons=1
-event1=EventPlaceClergy2P EventPlaceClergy3P EventPlaceClergy4P
+event1=EventPlaceSearch4P EventPlaceClergy3P
 add=TokenSearch3
-conditions=#heroes,==,3
+conditions=#heroes,>=,3
 
 [EventPlaceSearch4P]
 xposition=1
 yposition=11
 highlight=true
 buttons=1
-event1=EventPlaceClergy2P EventPlaceClergy3P EventPlaceClergy4P
+event1=EventPlaceClergy4P
 add=TokenSearch4
-conditions=#heroes,==,4
+conditions=#heroes,>=,4
 
 [EventQuestIntro]
 buttons=1
@@ -76,13 +62,13 @@ xposition=-2
 yposition=5
 highlight=true
 buttons=1
-event1=EventPlaceClergy2P EventPlaceClergy3P EventPlaceClergy4P
+event1=EventPlaceSearch3P EventPlaceClergy2P
 add=TokenSearch2P2
-conditions=#heroes,==,2
+conditions=#heroes,>=,2
 
 [EventVictory]
 buttons=1
-event1=EventWipeTheBoard
+event1=EventRewardsWin
 trigger=DefeatedMonsterBarghest
 
 [EventWipeTheBoard]
@@ -104,7 +90,6 @@ yposition=-2.521693
 buttons=1
 event1=EventObjective
 add=TokenClergy2P1 TokenClergy2P2
-conditions=#heroes,==,2
 
 [EventPlaceClergy3P]
 xposition=1.488181
@@ -112,7 +97,6 @@ yposition=-2.482301
 buttons=1
 event1=EventObjective
 add=TokenClergy2P1 TokenClergy2P2 TokenClergy3P
-conditions=#heroes,==,3
 
 [EventPlaceClergy4P]
 xposition=1.570971
@@ -123,13 +107,16 @@ add=TokenClergy2P1 TokenClergy2P2 TokenClergy3P TokenClergy4P
 conditions=#heroes,==,4
 
 [EventReinforcement]
-xposition=1.154507
-yposition=8.676208
+xposition=3
+yposition=10
+highlight=true
 buttons=1
-event1=EventGoblinCheck
+event1=SpawnReinforcement
 trigger=EndRound
 
 [EventGoblinCheck]
+xposition=-2.472948
+yposition=-2.53019
 buttons=2
 event1=EventOverlordFatique
 event2=
@@ -141,7 +128,7 @@ operations=FatiqueCounter,+,1
 
 [EventOverlordWin]
 buttons=1
-event1=EventWipeTheBoard
+event1=EventRewardsLose
 trigger=StartRound
 conditions=FatiqueCounter,>=,7
 
@@ -203,3 +190,11 @@ buttons=1
 event1=EventOverlordWin
 trigger=NoMorale
 operations=FatiqueCounter,=,7
+
+[EventRewardsWin]
+buttons=1
+event1=EventWipeTheBoard
+
+[EventRewardsLose]
+buttons=1
+event1=EventWipeTheBoard
