--- a/HeirsOfBlood_Acolyte_of_Saradyn/spawns.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/spawns.ini
@@ -1,16 +1,22 @@
 ; Saved by version: 1.7.0b
 
 [SpawnGoblins]
-display=false
+xposition=-3
+yposition=8
 buttons=1
-event1=EventPlaceBargs
+event1=SpawnBarghest
 monster=MonsterGoblinArcher
 
 [SpawnBarghest]
+xposition=2
+yposition=9
+buttons=1
+event1=EventPlaceSearch2P1
+monster=MonsterBarghest
+uniquehealth=2
+
+[SpawnReinforcement]
 display=false
 buttons=1
-event1=EventPlaceSearch2P1 EventPlaceSearch3P EventPlaceSearch4P
-monster=MonsterBarghest
-unique=true
-uniquehealth=2
-uniquehealthhero=0
+event1=EventGoblinCheck
+monster=MonsterGoblinArcher
