--- a/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/spawns.ini
+++ b/HeirsOfBlood_Acolyte_of_Saradyn/HeirsOfBlood_Rellegars_Rest/spawns.ini
@@ -41,3 +41,10 @@ display=false
 buttons=0
 trigger=EndRound
 monster=MonsterGoblinArcher
+
+[Spawn2_Goblins]
+xposition=0
+yposition=-19
+buttons=1
+event1=EventObjective
+monster=MonsterZombie
