More rellegars rest work

--- a/HeirsOfBlood/HeirsOfBlood_Rellegars_Rest/door.ini
+++ b/HeirsOfBlood/HeirsOfBlood_Rellegars_Rest/door.ini
@@ -4,7 +4,7 @@
 xposition=-1
 yposition=-3
 buttons=2
-event1=EventVictory
+event1=Event1_Victory
 event2=
 buttoncolor1="green"
 buttoncolor2="red"
@@ -14,23 +14,30 @@ rotation=90
 [Door2_Entrance]
 xposition=0
 yposition=-18
-display=false
-buttons=0
+buttons=1
+event1=Event2_PlaceTiles2
 color=yellow
 rotation=90
 
 [Door2_Waterway]
 xposition=-3
 yposition=-20
-display=false
-buttons=0
+buttons=1
+event1=Event2_PlaceTiles3
 color=yellow
 rotation=90
 
 [Door2_Library]
 xposition=0
 yposition=-12
-display=false
-buttons=0
+buttons=1
+event1=Event2_PlaceTiles4
 color=yellow
+rotation=90
+
+[Door2_Exit]
+xposition=1
+yposition=-26
+buttons=1
+event1=EventVictory
 rotation=90
