--- a/HeirsOfBlood/HeirsOfBlood_Rellegars_Rest/tokens.ini
+++ b/HeirsOfBlood/HeirsOfBlood_Rellegars_Rest/tokens.ini
@@ -4,7 +4,7 @@
 xposition=-10
 yposition=3
 buttons=1
-event1=EventTakeSearch2P1
+event1=Event1_TakeSearch2P1
 buttoncolor1="green"
 type=TokenSearch
 
@@ -12,7 +12,7 @@ type=TokenSearch
 xposition=-1
 yposition=6
 buttons=1
-event1=EventTakeSearch2P2
+event1=Event1_TakeSearch2P2
 buttoncolor1="green"
 type=TokenSearch
 
@@ -20,7 +20,7 @@ type=TokenSearch
 xposition=-3
 yposition=2
 buttons=1
-event1=EventTakeSearch3P
+event1=Event1_TakeSearch3P
 buttoncolor1="green"
 type=TokenSearch
 
@@ -28,7 +28,7 @@ type=TokenSearch
 xposition=5
 yposition=9
 buttons=1
-event1=EventTakeSearch4P
+event1=Event1_TakeSearch4P
 buttoncolor1="green"
 type=TokenSearch
 
@@ -63,57 +63,57 @@ type=TokenObjectiveBlue
 [Token2_Objective1]
 xposition=-5
 yposition=-25
-display=false
-buttons=0
+buttons=1
+event1=EventObjectiveCheck
 type=TokenObjectiveBack
 
 [Token2_Objective2]
 xposition=-3
 yposition=-25
-display=false
-buttons=0
+buttons=1
+event1=EventObjectiveCheck
 type=TokenObjectiveBack
 
 [Token2_Objective3]
 xposition=-5
 yposition=-24
-display=false
-buttons=0
+buttons=1
+event1=EventObjectiveCheck
 type=TokenObjectiveBack
 
 [Token2_Objective4]
 xposition=-3
 yposition=-24
-display=false
-buttons=0
+buttons=1
+event1=EventObjectiveCheck
 type=TokenObjectiveBack
 
 [Token2_SearchUnique1]
 xposition=-5
 yposition=-9
-display=false
-buttons=0
+buttons=1
+event1=Event2_FoundTreasure1
 type=TokenSearch
 
 [Token2_SearchUnique2]
 xposition=-5
 yposition=-7
-display=false
-buttons=0
+buttons=1
+event1=Event2_FoundTreasure2
 type=TokenSearch
 
 [Token2_SearchUnique3]
 xposition=-3
 yposition=-6
-display=false
-buttons=0
+buttons=1
+event1=Event2_FoundTreasure3
 type=TokenSearch
 
-[TokenSearch3P]
+[Token2_Search3P]
 xposition=-2
 yposition=-9
-display=false
-buttons=0
+buttons=1
+event1=Event2_SearchFound
 type=TokenSearch
 
 [Token1_Obj1]
