--- a/HeirsOfBlood/HeirsOfBlood_Rellegars_Rest/events.ini
+++ b/HeirsOfBlood/HeirsOfBlood_Rellegars_Rest/events.ini
@@ -284,7 +284,7 @@ buttons=1
 event1=Event2_PlaceSearh2P1
 add=Tile2_Endcap1 Tile2_13B_Library Token2_Support_Pillar3
 remove=Door2_Library
-operations=Library,=,1
+operations=Library,=,1 MerickDefeated,=,0
 
 [Event2_PlaceSearch3P]
 xposition=-2
@@ -454,11 +454,7 @@ event1=
 buttons=1
 event1=
 
-[Event2_Reinforcement]
-buttons=1
-event1=Spawn2_Reinforcement
-
-[Event0]
+[Event2_NoMorale]
 buttons=1
 event1=Event2_OverlordWin
 trigger=NoMorale
@@ -473,3 +469,17 @@ remove=#monsters #boardcomponents
 buttons=2
 event1=EventBloodWillTell
 event2=EventTheBaronReturns
+
+[Event2_MerickDefeated]
+display=false
+buttons=0
+trigger=DefeatedMonsterLordMerickFarrow
+operations=MerickDefeated,=,1
+
+[Event2_MerickResurrect]
+display=false
+buttons=1
+event1=Spawn2_Merick19B Spawn2_Merick24B Spawn2_Merick13B Spawn2_Merick3B
+trigger=EndRound
+conditions=MerickDefeated,==,1
+randomevents=true
