--- a/HeirsOfBlood/HeirsOfBlood_Rellegars_Rest/spawns.ini
+++ b/HeirsOfBlood/HeirsOfBlood_Rellegars_Rest/spawns.ini
@@ -52,15 +52,44 @@ monster=MonsterLordMerickFarrow
 [Spawn2_Reinforcement]
 xposition=1
 yposition=-25
-display=false
-buttons=0
+buttons=1
+event1=
 trigger=EndRound
 conditions=Encounter,==,2
 monster=MonsterGoblinArcher
 
-[Spawn0]
+[Spawn2_Merick19B]
 xposition=0
-yposition=0
-display=false
-buttons=0
-monster=MonsterZombie
+yposition=-22
+buttons=1
+event1=
+operations=MerickDefeated,=,0 MerickActive,=,1
+conditions=var2_Pillar1Fatique,<,4
+monster=MonsterLordMerickFarrow
+
+[Spawn2_Merick3B]
+xposition=0
+yposition=-15
+buttons=1
+event1=
+operations=MerickDefeated,=,0 MerickActive,=,1
+conditions=var2_Pillar2Fatique,<,4
+monster=MonsterLordMerickFarrow
+
+[Spawn2_Merick24B]
+xposition=-3
+yposition=-18
+buttons=1
+event1=
+operations=MerickDefeated,=,0 MerickActive,=,1
+conditions=var2_Pillar4Fatique,<,4
+monster=MonsterLordMerickFarrow
+
+[Spawn2_Merick13B]
+xposition=-2
+yposition=-6
+buttons=1
+event1=
+operations=MerickDefeated,=,0 MerickActive,=,1
+conditions=var2_Pillar3Fatique,<,4
+monster=MonsterLordMerickFarrow
